--- a/pom.xml
+++ b/pom.xml
@@ -51,8 +51,26 @@
 
 		<dependency>
 			<groupId>org.jbpm</groupId>
-			<artifactId>jbpm-test</artifactId>
+			<artifactId>jbpm-bpmn2</artifactId>
 			<version>${runtime.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.7</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.7</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j-impl</artifactId>
+			<version>2.7</version>
 		</dependency>
 
 		<dependency>
@@ -61,7 +79,7 @@
 			<version>5.9.1</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
